--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@expressive-code/core": "^0.41.3",
     "@expressive-code/plugin-collapsible-sections": "^0.41.3",
     "@expressive-code/plugin-line-numbers": "^0.41.3",
-    "@fontsource-variable/jetbrains-mono": "^5.2.6",
-    "@fontsource/roboto": "^5.2.6",
+    "@fontsource-variable/jetbrains-mono": "^5.2.7",
+    "@fontsource/roboto": "^5.2.7",
     "@iconify-json/fa6-brands": "^1.2.6",
     "@iconify-json/fa6-regular": "^1.2.4",
     "@iconify-json/fa6-solid": "^1.2.4",
@@ -36,12 +36,14 @@
     "astro": "5.13.5",
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
+    "astro-mermaid": "^1.0.4",
     "hastscript": "^9.0.1",
     "katex": "^0.16.22",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "overlayscrollbars": "^2.11.5",
-    "pagefind": "^1.3.0",
+    "mermaid": "^11.11.0",
+    "overlayscrollbars": "^2.12.0",
+    "pagefind": "^1.4.0",
     "photoswipe": "^5.4.4",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -56,7 +58,7 @@
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.3",
     "stylus": "^0.64.0",
-    "svelte": "^5.38.6",
+    "svelte": "^5.38.10",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
     "unist-util-visit": "^5.0.0"
