--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,10 +14,11 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll": "explicit",
-    "quickfix.biome": "always",
-    "source.organizeImports.biome": "always"
+    "source.fixAll.biome": "explicit"
   },
   "frontMatter.dashboard.openOnStart": false,
-  "Codegeex.RepoIndex": true
+  "Codegeex.RepoIndex": true,
+  "[astro]": {
+    "editor.defaultFormatter": "astro-build.astro-vscode"
+  }
 }
