[+] cloudflared-advanced - Cloudflared (Cloudflare Tunnel) 手把手使用教程

--- a/src/content/posts/.obsidian/app.json
+++ b/src/content/posts/.obsidian/app.json
@@ -6,5 +6,6 @@
   "attachmentFolderPath": "./",
   "newFileLocation": "current",
   "promptDelete": false,
-  "useMarkdownLinks": true
+  "useMarkdownLinks": true,
+  "showUnsupportedFiles": true
 }
