--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "check": "astro check",
-    "build": "astro build || astro build && pagefind --site dist",
+    "build": "astro build && pagefind --site dist",
     "preview": "astro preview",
     "astro": "astro",
     "type-check": "tsc --noEmit --isolatedDeclarations",
@@ -36,12 +36,10 @@
     "astro": "5.14.5",
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
-    "astro-mermaid": "^1.1.0",
     "hastscript": "^9.0.1",
     "katex": "^0.16.25",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "mermaid": "^11.12.0",
     "overlayscrollbars": "^2.12.0",
     "pagefind": "^1.4.0",
     "photoswipe": "^5.4.4",
@@ -61,8 +59,7 @@
     "svelte": "^5.42.2",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
-    "unist-util-visit": "^5.0.0",
-    "yaml": "^2.8.1"
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.5",
