[+] bashrc-ps1 - Bash / CMD 提示符分享

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "css-parser": "https://github.com/ramya-rao-a/css-parser.git",
     "@astrojs/check": "^0.9.5",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
@@ -30,13 +29,14 @@
     "@iconify-json/fa6-brands": "^1.2.6",
     "@iconify-json/fa6-regular": "^1.2.4",
     "@iconify-json/fa6-solid": "^1.2.4",
-    "@iconify-json/material-symbols": "^1.2.42",
+    "@iconify-json/material-symbols": "^1.2.44",
     "@iconify/svelte": "^4.2.0",
     "@swup/astro": "^1.7.0",
     "@tailwindcss/typography": "^0.5.19",
     "astro": "5.14.5",
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
+    "css-parser": "github:ramya-rao-a/css-parser",
     "hastscript": "^9.0.1",
     "katex": "^0.16.25",
     "markdown-it": "^14.1.0",
@@ -57,7 +57,7 @@
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.4",
     "stylus": "^0.64.0",
-    "svelte": "^5.42.2",
+    "svelte": "^5.43.2",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
     "unist-util-visit": "^5.0.0"
